--- a/instagram42.html
+++ b/instagram42.html
@@ -1,6 +1,188 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000517.jpg" title="Some better photos of this Almanzo 100 bag set. Hi-vis orange, neon lime and electric turquoise...definitely rad. #almanzo100 #handmade #bikepacking #framebag #gravelgrinder #lovestarbicyclebags #blackisboring" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Some better photos of this Almanzo 100 bag set. Hi-vis orange, neon lime and electric turquoise...definitely rad. #almanzo100 #handmade #bikepacking #framebag #gravelgrinder #lovestarbicyclebags #blackisboring</small>
+                           </div>
+                           <img src="../lsphotos/image000517.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000518.jpg" title="Few more shots... #bikepacking  #gravelgrinder #lovestarbicyclebags #handmade" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Few more shots... #bikepacking  #gravelgrinder #lovestarbicyclebags #handmade</small>
+                           </div>
+                           <img src="../lsphotos/image000518.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000519.jpg" title="A complete set of very flashy Lovestar Bicycle Bags. Saddlepack, Framebag & Fuel Tank bag all in matching hi-vis orange and neon lime with turquoise racing stripes. Look for these bags at the Almanzo 100 this year! #bikepacking #gravelgrinder #gravel #handmade #cycling #ultracross #lovestarbicyclebags #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>A complete set of very flashy Lovestar Bicycle Bags. Saddlepack, Framebag & Fuel Tank bag all in matching hi-vis orange and neon lime with turquoise racing stripes. Look for these bags at the Almanzo 100 this year! #bikepacking #gravelgrinder #gravel #handmade #cycling #ultracross #lovestarbicyclebags #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000519.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000520.jpg" title="To date I have worked exclusively on Singer featherweight machines. The white one is circa 1963 and the black one 1947. These are amazing machines clearly made in a different era when  products were made to be serviced an cared for over the span of multiple generations. Both of these machines have deep personal history in my family, and will probably still be humming away long after I am gone. #sometimestheoldwaysarebest #singersewingmachines #handmade #lovestarbicyclebags #dontmakethemliketheyusedtoo" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>To date I have worked exclusively on Singer featherweight machines. The white one is circa 1963 and the black one 1947. These are amazing machines clearly made in a different era when  products were made to be serviced an cared for over the span of multiple generations. Both of these machines have deep personal history in my family, and will probably still be humming away long after I am gone. #sometimestheoldwaysarebest #singersewingmachines #handmade #lovestarbicyclebags #dontmakethemliketheyusedtoo</small>
+                           </div>
+                           <img src="../lsphotos/image000520.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000521.jpg" title="Step 2 took three drafts and a lot of troubleshooting before I was pleased with the final result. #lovestarbicyclebags #handmade #bikechi #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Step 2 took three drafts and a lot of troubleshooting before I was pleased with the final result. #lovestarbicyclebags #handmade #bikechi #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000521.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000522.jpg" title="First step was relatively simple... #lovestarbicyclebags #handmade #bikechi #hivis" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>First step was relatively simple... #lovestarbicyclebags #handmade #bikechi #hivis</small>
+                           </div>
+                           <img src="../lsphotos/image000522.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000523.jpg" title="Sketchy beginnings... #lovestarbicyclebags #handmade #bikepacking #gravelgrinder" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sketchy beginnings... #lovestarbicyclebags #handmade #bikepacking #gravelgrinder</small>
+                           </div>
+                           <img src="../lsphotos/image000523.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000524.jpg" title="A good morning preview of my latest project. This set of matching bags (there will be a frame bag too) will be traveling to the Almanzo 100 in all of its rad-ness. #lovestarbicyclebags #bikechi #almanzo100 #gravel #bikepacking #handmade #ineedsunglasses" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>A good morning preview of my latest project. This set of matching bags (there will be a frame bag too) will be traveling to the Almanzo 100 in all of its rad-ness. #lovestarbicyclebags #bikechi #almanzo100 #gravel #bikepacking #handmade #ineedsunglasses</small>
+                           </div>
+                           <img src="../lsphotos/image000524.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000525.jpg" title="Prototype gas tank bag... #lovestarbicyclebags #handmade #blackisboring" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Prototype gas tank bag... #lovestarbicyclebags #handmade #blackisboring</small>
+                           </div>
+                           <img src="../lsphotos/image000525.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000526.jpg" title="If you're riding tubulars, a compact secure storage for a spare can be tough to come by. Check out the latest Lovestar Bicycle Bags prototype! #tubulars #lovestarbicyclebags #bikechi #pinstripes #handmade" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>If you're riding tubulars, a compact secure storage for a spare can be tough to come by. Check out the latest Lovestar Bicycle Bags prototype! #tubulars #lovestarbicyclebags #bikechi #pinstripes #handmade</small>
+                           </div>
+                           <img src="../lsphotos/image000526.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000527.jpg" title="Stylish, compact & secure storage for on the ride essentials #instacollage #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Stylish, compact & secure storage for on the ride essentials #instacollage #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000527.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000528.jpg" title="Finished up a batch of black/grey/orange bags. All of them share a wicked orange interior. 3 Cordura & 3 XPac bags in this run. #lovestarbicyclebags #handmade #bikechi #bicyclestyle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a batch of black/grey/orange bags. All of them share a wicked orange interior. 3 Cordura & 3 XPac bags in this run. #lovestarbicyclebags #handmade #bikechi #bicyclestyle</small>
+                           </div>
+                           <img src="../lsphotos/image000528.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000529.jpg" title="There's a whole lotta orange Saddle Pack happening tonight. #lovestarbicyclebags #bikechi #handmade #customcolors" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>There's a whole lotta orange Saddle Pack happening tonight. #lovestarbicyclebags #bikechi #handmade #customcolors</small>
+                           </div>
+                           <img src="../lsphotos/image000529.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000530.jpg" title="Finished up a Lovely pair of saddle packs. They're being delivered tomorrow as a customer's Valentines Day gift! #lovestarbicyclebags #valentinesday" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a Lovely pair of saddle packs. They're being delivered tomorrow as a customer's Valentines Day gift! #lovestarbicyclebags #valentinesday</small>
+                           </div>
+                           <img src="../lsphotos/image000530.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000531.jpg" title="I love supporting friends and their projects. A fantastic handmade Cordura saddle bag made by @elliotlovestarbicycles in Chicago. Check out his Etsy page for more great products. Thanks, Elliot! #bikechi #lovestarbicyclebags #handmade" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>thatphilbirdkid</h4>
